2006-11-06 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk: added default definitions for PREFIX and
	  HOSTPREFIX
	* components/sdcc.mk: removed --prefix=$(PREFIX) argument to configure
	  command line, use $(HOSTPREFIX)
	* local/x86-linux2-i586-mingw32msvc.mk: add --prefix=$(PREFIX) to
	  SDCCCONFIGUREFLAGS

2006-11-05 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk: added --prefix=$(PREFIX) argument to configure
	  command line, use $(PREFIX) variable instead hard-coded /usr/local,
	  added sdcc-install-clean target to remove the previous installation
	* local/x86-linux2-i586-mingw32msvc.mk: defined PREFIX = /sdcc
	* Makefile: remove the previous installation before installing the
	  new one
	* local/crush.mk, local/ppc-osx2.cf.sourceforge.net.mk,
	  local/sapphire.mk, local/sapphire-i586-mingw32msvc.mk,
	  local/saturn.juju.net.nz.mk,
	  local/saturn.juju.net.nz-i386-mingw32msvc.mk,
	  local/ucf-cf-ppc-macosx-2.mk, local/ucf-cf-ppc-linux-1.mk,
	  local/ucf-cf-ppc-macosx-1.mk, local/ucf-cf-sparc-linux-1.mk,
	  local/x86-linux1-i586-mingw32msvc.mk, local/x86-linux1.mk:
	  removed unneeded locals
	* components/sdcc.mk: make _SDCCDIR local, removed /usr/local from
	  host build directory
	* lib/bootstrap.mk: use $(PREFIX)


2006-10-31 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: fixed build failure if $(ORIGDIR)/sdcc doesn't exist
	* sdcc-build-bootstrap.sh: checkout sdcc-build directory to
	  $(HOME)/build/sdcc/sdcc-build/orig/sdcc-build instead
	  $(HOME)/build/sdcc/sdcc-build/dl

2006-10-30 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: add readline5.dll to packages if cross compiling
	* lib/upload.mk: keep only the newest 7 files in changelog_heads

2006-10-23 Borut Razem <borut.razem AT siol.net>

	* support/sdcc_theme.pl: corect doubled </HEAD>

2006-10-22 Borut Razem <borut.razem AT siol.net>

	* support/sdcc_theme_navbar.html: deleted
	* support/sdcc_theme.pl: don't use sdcc_theme_navbar.html, insert